<resources>
    <string name="app_name">Firebases</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_una_cuenta_iniciar_sesi_n">¿Ya tienes una cuenta? Iniciar Sesión</string>
    <string name="facebook_app_id">2126296210973112</string>
    <string name="fb_login_protocol_scheme">fb2126296210973112</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="usuario_nuevo_registrate">¿Usuario nuevo? Registrate</string>
    <string name="password">Password</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="titulo_dieta">Introduce un titulo para tu dieta</string>
    <string name="escribe_aqui">Escribe aqui</string>
    <string name="escribe_aqu_tu_dieta">Escribe aquí tu dieta</string>
    <string name="enviar_dieta">Enviar dieta</string>
    <string name="dietas">Dietas</string>
    <string name="eliminar">Eliminar</string>
    <string name="salir">Salir</string>
    <string name="canidad">canidad</string>
    <string name="guardar">Guardar</string>
    <string name="ma_ana">Mañana</string>
    <string name="manana">Mañana</string>
    <string name="noche">Noche</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="cena">Cena</string>
    <string name="desayuno">Desayuno</string>
    <string name="cerrar_cesion">Cerrar cesion</string>
    <string name="exportar">Exportar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hola">Hola</string>
    <string name="leer_memoria_interna">Leer Memoria interna</string>
    <string name="escribir_memoria_interna">Escribir memoria interna</string>
    <string name="leer_sd">Leer SD</string>
    <string name="escribir_sd">Escribir SD</string>
    <string name="leer_del_programa">Leer del programa</string>


    <string name="registro_hint">¿No estas registrado? Crear una cuenta</string>
    <string name="login_text">Iniciar Sesión</string>
    <string name="descripcion_puerco">Puerquito vergas</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_usuario">Usuario</string>
    <string name="saldo_actual">Saldo actual</string>
    <string name="meta_de_ahorros">Meta de ahorros</string>
    <string name="txt_registro">Registrarme</string>
    <string name="reg_reg">¿Ya tienes una cuenta? Iniciar sesión</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="saldo">0</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="gastos">Control de Gastos APP</string>
    <string name="preference_file_key">datos</string>
    <string name="cantidad">Cantidad:</string>
    <string name="acci_n">Acción</string>
    <string name="aceptar">Aceptar</string>
    <string name="meta">Meta</string>
    <string name="dedd">Manuel</string>
    <string name="formater">%1$s de %2$s !</string>
    <string name="un_puerco">un puerco</string>
    <string name="mis_ahorritos">Mis Ahorritos</string>
    <string name="ver_dietas">Ver dietas</string>
</resources>
