<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManejoDeArchivos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hola"/>
            <Button
                android:id="@+id/btnLeerMemoriaInterna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leer_memoria_interna"/>
            <Button
                android:id="@+id/btnEscribirMemoriaInterna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escribir_memoria_interna"/>

            <Button
                android:id="@+id/btnLeerSD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leer_sd"/>

            <Button
                android:id="@+id/btnEscribirSD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escribir_sd"/>

            <Button
                android:id="@+id/btnLeerApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leer_del_programa"/>

        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>