<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:showDividers="middle"
    tools:context=".tarde">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <TextView android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Calorias actuales"
            android:layout_weight="1"
            android:textSize="23sp"
            android:textStyle="bold"/>

        <TextView android:textColor="@android:color/white"
            android:id="@+id/saldo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/saldo"
            android:layout_weight="1"
            android:textSize="23sp"
            />

    </LinearLayout>
    <ImageView android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        />
    <TextView android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/cantidad"/>

    <EditText
        android:id="@+id/cantidad_perro"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:hint="@string/saldo"
        android:textColor="@android:color/white"
        tools:textColorHint="#ffff" />
    <TextView android:textColor="@android:color/white"

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="Alimento"
        />
    <Spinner
        android:backgroundTint="@android:color/white"
        android:id="@+id/accion"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    <Button
        android:layout_marginTop="25dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btn_Aceptar"
        android:text="@string/aceptar"/>

    <Button
        android:layout_marginTop="25dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnVerDietas"
        android:text="@string/ver_dietas"/>
</LinearLayout>