<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maniana"
    >

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView

            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desayuno"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"

            />

           <Spinner
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/spin1"
               android:entries="@array/dietasm"
               >

           </Spinner>
            <EditText
                android:id="@+id/edtcantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textStyle="bold"
                android:hint="@string/canidad"
                android:layout_marginBottom="@dimen/fab_margin"/>
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:textStyle="italic"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/fab_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtcalorias"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:foregroundGravity="bottom">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Ver lista completa de dietas"
                android:id="@+id/btnlistdiet"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cerrar_cesion"
                android:id="@+id/btnsalir"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnexport"
                android:hint="Exportar"/>


        </LinearLayout>
    </ScrollView>

</FrameLayout>